added mongodb configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=BRN-Foods
+spring.data.mongodb.uri=mongodb+srv://brnfoods24:WHi33AWMjWdWTzE3@brnfoods.7avnlpt.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=test
